# C-CHAIN

./: .gitignore  main.py  pyproject.toml
crl_dmc/: crl_run_ppo_c_chain_dmc.py  crl_run_ppo_dmc.py  crl_run_ppo_dmc_oracle.py
crl_dmc/utils/: basic_utils.py
crl_metaworld/: crl_run_ppo_c_chain_metaworld.py  crl_run_ppo_c_chain_metaworld_crl.py  crl_run_ppo_metaworld.py  crl_run_ppo_metaworld_crl.py
scripts/: run_dmc_all.sh  run_dmc_cchain.sh  run_dmc_ppo.sh  run_metaworld_cchain.sh  run_metaworld_cchain_crl.sh  run_metaworld_ppo.sh  run_metaworld_ppo_crl.sh  summarize_dmc.py  summarize_dmc_eval.py  summarize_metaworld_cchain.py  summarize_metaworld_crl.py  summarize_metaworld_ppo.py
