[project]
name = "c-chain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=1.2.2",
    "metaworld>=3.0.0",
    "mujoco>=3.3.7",
    "numpy>=2.3.5",
    "tensorboard>=2.20.0",
    "torch>=2.9.1",
    "tyro>=0.9.35",
    "wandb>=0.23.0",
]
